fix few-shot dos

--- a/docs/features/models/few_shot_intent_classification.ipynb
+++ b/docs/features/models/few_shot_intent_classification.ipynb
@@ -9,10 +9,8 @@
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
     "\n",
     "2. [Dataset](#2.-Datasets)\n",
-    "\n",
-    "    2.1 [OOS examples](#2.1-OOS-examples)\n",
     "    \n",
-    "    2.2 [Datasets format](#2.2-Datasets-format)\n",
+    "    2.1 [Datasets format](#2.1-Datasets-format)\n",
     "\n",
     "3. [Model architecture](#3.-Model-architecture)\n",
     "\n",
@@ -54,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Intent classification__ is a task of identifying speaker's intent given an utterance, where intent is one of N classes or \"oos\". We consider few-shot setting, where only few examples (5 or 10) per intent class are given as a training set.\n"
+    "__Intent classification__ is a task of identifying speaker's intent given an utterance, where intent is one of N classes or \"OOS\" (out-of-scope examples - utterances that do not belong to any of the predefined classes). We consider few-shot setting, where only few examples (5 or 10) per intent class are given as a training set.\n"
    ]
   },
   {
@@ -68,39 +66,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We consider the following dataset:\n",
+    "In our experiments we used the [CLINC150](https://paperswithcode.com/dataset/clinc150) dataset, which has 10 different domains with 15 intents each, 100 shots per intent class and 1000 OOS examples. It simulates a setting, where model has to handle many different services with wide variety of intents.\n",
     "\n",
-    "-  [CLINC150](https://paperswithcode.com/dataset/clinc150>) - has 10 different domains with 150 intents total and 100 shots per intent. This dataset simulates a setting, where model has to handle many different services with wide variety of intents\n",
-    "\n",
-    "Specifically, we validate our model on CLINC150 from original DNNC paper. Dataset is downloaded from dnnc github page https://github.com/salesforce/DNNC-few-shot-intent and then parsed to match the [format below](#22-dataset-format)"
+    "Specifically, we validate our model on CLINC150 from the original DNNC paper. We parsed it to match the format described [below](#21-dataset-format). The original dataset can be downloaded from the DNNC [github page](https://github.com/salesforce/DNNC-few-shot-intent)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 OOS examples"
+    "## 2.1 Datasets format"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CLINC150 also provides 1000 OOS examples, which don't belong to any domain or intent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2.2 Dataset format"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Train, dev and test set are separate files with the following format\n",
+    "Train, dev and test set are separate json files, which have the following format\n",
     "\n",
     "```\n",
     "{\n",
@@ -133,16 +115,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The typical methodology is to embed each example into a vector space and use an off-the-shelf distance metric to perform a similarity search. However, the text embedding methods do not discriminate the OOS examples well enough\n",
+    "The typical methodology of few-shot intent classification is to embed each example into a vector space and use an off-the-shelf distance metric to perform a similarity search. However, the text embedding methods do not discriminate the OOS examples well enough.\n",
     "\n",
     "\n",
-    "Proposed method suggests to model fine-grained relations of utterance pairs via pairise simmilarity:\n",
+    "DNNC authors suggests to model fine-grained relations of utterance pairs via pairise simmilarity:\n",
     "\n",
     "$h = BERT([[CLS], u, [SEP], e_{j,i}, [SEP]]) \\in \\R^d$\n",
     "\n",
     "$S(u, e_{j,i}) = \\sigma(W * h + b) \\in \\R$, where $e_{j, i} \\in E $- training set, $W \\in \\R^{1×d}$, $b \\in \\R$\n",
     "\n",
-    "To mitigate the data scarcity setting in few-shot learning, DNNC uses knowldge-transfer from NLI task. We pretrain roberta-base on combination of 3 NLI datasets: SNLI, WNLI, MNLI"
+    "To mitigate the data scarcity setting in few-shot learning, DNNC uses knowldge-transfer from NLI task. We pretrain [roberta-base](https://huggingface.co/roberta-base) on combination of 3 NLI datasets: SNLI, WNLI, MNLI."
    ]
   },
   {
@@ -164,7 +146,7 @@
    "metadata": {},
    "source": [
     "First make sure you have the DeepPavlov Library installed.\n",
-    "[More info about the first installation](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
+    "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
   },
   {
@@ -173,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --q deeppavlov"
+    "!pip install deeppavlov"
    ]
   },
   {
@@ -196,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`dnnc` here is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
+    "`dnnc` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes it's hyperparameters"
    ]
@@ -212,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before making prediction or evaluation you need to set path to your support dataset, which will be used for predictions"
+    "Before making predictions or evaluation you need to set path to your support dataset. DNNC model compares input text to every example in support dataset to determine, which class the input example belongs to. By default, the model uses training data as support dataset. You can specify the support dataset path in the in `dnnc` config file. It has the same format as metioned [before]()"
    ]
   },
   {
@@ -254,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Out-of-scope (OOS) examples are determined via confidence_threshold parameter. The higher the threshold, the more often the model predicts OOS class. By default it is set to 0.5. You can change it to your preferences in configuration file"
+    "Out-of-scope (OOS) examples are determined via confidence_threshold parameter with the following algorithm. Firstly model calculates an average similarity score for every intent class from support dataset. Secondly it determines the class with maximum similarity score. Finally the model predicts class with maximum similarity if it's score is higher than confidence_threshold and \"oos\" class otherwise. The higher the threshold, the more often the model predicts \"oos\" class. By default it is set to 0.5. You can change it to your preferences in configuration file"
    ]
   },
   {
@@ -298,16 +280,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deeppavlov import build_model\n",
+    "from deeppavlov import build_model, configs\n",
     "\n",
     "model = build_model(\"dnnc\", download=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['book_hotel', 'international_visa']\n"
+     ]
+    }
+   ],
    "source": [
     "model([\"can you find me a good reviewed hotel in japan\", \"if i get a visa can i travel to japan\"])"
    ]
@@ -362,14 +352,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have a separate \"robert_nli\" config for training, which automatically transforms dataset into a pairwise format"
+    "We have a separate `roberta_nli` config for training, which automatically transforms dataset into a pairwise format"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To train the model on your data, you need to change the path to the dataset in \"roberta_nli\" config"
+    "To train the model on your data, you need to change the path to the dataset in `roberta_nli` config"
    ]
   },
   {
@@ -431,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To evaluate the model on your data, you need to change the path to the dataset in \"dnnc\" config"
+    "To evaluate the model on your data, you need to change the path to the dataset in `dnnc` config"
    ]
   },
   {
