--- a/docs/features/models/few_shot_classification.ipynb
+++ b/docs/features/models/few_shot_classification.ipynb
@@ -28,15 +28,15 @@
     "     \n",
     "6. [Train the model on your data](#6.-Train-the-model-on-your-data)\n",
     "    \n",
-    "    6.1. [Train your model from Python](#6.1-Train-your-model-from-Python)\n",
+    "    6.1 [Train your model from Python](#6.1-Train-your-model-from-Python)\n",
     "    \n",
-    "    6.2. [Train your model from CLI](#6.2-Train-your-model-from-CLI)\n",
+    "    6.2 [Train your model from CLI](#6.2-Train-your-model-from-CLI)\n",
     "    \n",
     "7. [Evaluate](#7.-Evaluate)\n",
     "    \n",
-    "    7.1. [Evaluate from Python](#7.1-Evaluate-from-Python)\n",
+    "    7.1 [Evaluate from Python](#7.1-Evaluate-from-Python)\n",
     "    \n",
-    "    7.2. [Evaluate from CLI](#7.2-Evaluate-from-CLI)\n",
+    "    7.2 [Evaluate from CLI](#7.2-Evaluate-from-CLI)\n",
     "    \n",
     "8. [Metrics](#8.-Metrics)"
    ]
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Intent classification__ is a task of identifying speaker's intent given an utterance, where intent is one of N classes or \"OOS\" (out-of-scope examples - utterances that do not belong to any of the predefined classes). We consider few-shot setting, where only few examples (5 or 10) per intent class are given as a training set.\n"
+    "__Text classification__ is a task of identifying one of the pre-defined label given an utterance, where label is one of N classes or \"OOS\" (out-of-scope examples - utterances that do not belong to any of the predefined classes). We consider few-shot setting, where only few examples (5 or 10) per intent class are given as a training set.\n"
    ]
   },
   {
@@ -95,7 +95,7 @@
     "\n",
     "        [\n",
     "            \"text\"\n",
-    "            \"intent_class\"\n",
+    "            \"label\"\n",
     "        ],\n",
     "\n",
     "        ...\n",
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The typical methodology of few-shot intent classification is to embed each example into a vector space and use an off-the-shelf distance metric to perform a similarity search. However, the text embedding methods do not discriminate the OOS examples well enough.\n",
+    "The typical methodology of few-shot text classification is to embed each example into a vector space and use an off-the-shelf distance metric to perform a similarity search. However, the text embedding methods do not discriminate the OOS examples well enough.\n",
     "\n",
     "\n",
     "DNNC authors suggests to model fine-grained relations of utterance pairs via pairise simmilarity:\n",
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then make sure that all the required packages for the model are installed."
+    "Then make sure that all the required packages, datasets and weights are installed."
    ]
   },
   {
@@ -171,7 +171,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m deeppavlov install dnnc"
+    "!python -m deeppavlov install dnnc\n",
+    "!python -m deeppavlov download dnnc"
    ]
   },
   {
@@ -194,14 +195,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before making predictions or evaluation you need to set path to your support dataset. DNNC model compares input text to every example in support dataset to determine, which class the input example belongs to. By default, the model uses training data as support dataset. You can specify the support dataset path in the in `dnnc` config file. It has the same format as metioned [before]()"
+    "Before making predictions or evaluation you need to set path to your support dataset. DNNC model compares input text to every example in support dataset to determine, which class the input example belongs to. By default, the model uses training set as support dataset. It is automatically saved by *dataset_iterator*  during the training step, but you can specify your own support dataset in the in `dnnc` config file. It has the same format as metioned [before]()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~/.deeppavlov/parsed_datasets/parsed_dataset.json\n"
+     ]
+    }
+   ],
    "source": [
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
@@ -236,14 +245,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Out-of-scope (OOS) examples are determined via confidence_threshold parameter with the following algorithm. Firstly model calculates an average similarity score for every intent class from support dataset. Secondly it determines the class with maximum similarity score. Finally the model predicts class with maximum similarity if it's score is higher than confidence_threshold and \"oos\" class otherwise. The higher the threshold, the more often the model predicts \"oos\" class. By default it is set to 0.5. You can change it to your preferences in configuration file"
+    "Out-of-scope (OOS) examples are determined via confidence_threshold parameter with the following algorithm. Firstly model calculates an average similarity score for every class from support dataset. Secondly it determines the class with maximum similarity score. Finally the model predicts class with maximum similarity if it's score is higher than confidence_threshold and \"oos\" class otherwise. The higher the threshold, the more often the model predicts \"oos\" class. By default it is set to 0.5 and you can change it to your preferences in configuration file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
    "source": [
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
@@ -271,18 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After [installing](#4.-Get-started-with-the-model) the model, build it from the config and predict."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from deeppavlov import build_model, configs\n",
-    "\n",
-    "model = build_model(\"dnnc\", download=True)"
+    "After [installing](#4.-Get-started-with-the-model) the model, build it from the config and predict. If you set 'download' flag to 'True', then existing model weights will be overwritten. "
    ]
   },
   {
@@ -299,6 +305,10 @@
     }
    ],
    "source": [
+    "from deeppavlov import build_model, configs\n",
+    "\n",
+    "model = build_model(\"dnnc\", install=True, download=True)\n",
+    "\n",
     "model([\"can you find me a good reviewed hotel in japan\", \"if i get a visa can i travel to japan\"])"
    ]
   },
@@ -322,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m deeppavlov interact dnnc -d"
+    "!python -m deeppavlov interact dnnc [-d] [-i]"
    ]
   },
   {
@@ -338,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m deeppavlov predict dnnc -f <file-name>"
+    "!python -m deeppavlov predict dnnc [-d] [-i]"
    ]
   },
   {
@@ -364,9 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~/.deeppavlov/downloads/clinc150_no_oos\n"
+     ]
+    }
+   ],
    "source": [
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
@@ -391,7 +409,7 @@
    "source": [
     "from deeppavlov import train_model\n",
     "\n",
-    "model = train_model(\"roberta_nli\", download=True)"
+    "model = train_model(\"roberta_nli\", install=True, download=True)"
    ]
   },
   {
@@ -407,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m deeppavlov train roberta_nli"
+    "!python -m deeppavlov train roberta_nli [-d] [-i]"
    ]
   },
   {
@@ -426,9 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~/.deeppavlov/downloads/clinc150\n"
+     ]
+    }
+   ],
    "source": [
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
@@ -453,7 +479,7 @@
    "source": [
     "from deeppavlov import evaluate_model\n",
     "\n",
-    "model = evaluate_model('dnnc', download=True)"
+    "model = evaluate_model('dnnc', install=True, download=True)"
    ]
   },
   {
@@ -469,13 +495,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m deeppavlov evaluate dnnc -d"
+    "!python -m deeppavlov evaluate dnnc [-d] [-i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8. Metrics"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We follow the original DNNC paper approach and choose the best confidence_threshold on the dev set "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Config name  | Dataset | Shot| Threshold |In-domain Accuracy | OOS Precision | OOS Recall | OOS F1 |\n",
+    "| :--- | --- | --- | --- | --- | --- | --- | ---: |\n",
+    "| dnnc | [CLINC150](https://paperswithcode.com/dataset/clinc150) | 5 | 0.6 | 88.8 | 71.0 | 86.2 | 77.8 |\n",
+    "| dnnc | [CLINC150](https://paperswithcode.com/dataset/clinc150) Banking Domain| 5 | 0.4 | 90.7 | 97.3 | 98.7 | 98.0 |\n",
+    "| dnnc | [CLINC150](https://paperswithcode.com/dataset/clinc150) Work Domain | 5 | 0.1 | 98.1 | 99.9 | 95.4 | 97.6 |"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('dnnc_cuda11_env': venv)",
+   "display_name": "Python 3.8.10 ('dnnc_env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -489,12 +542,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d267cc100fe706c63aefa7fd2da1b610b862ac822a3924399ae410740f5c813e"
+    "hash": "0856b36c2b26de82c1ead3e3019420db4ffa1511d91e779db8eb71f2314c36e4"
    }
   }
  },
