--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -22,6 +22,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,7 +45,14 @@
     "    5.1. [from Python](#5.1-Train-your-model-from-Python)\n",
     "   \n",
     "    5.2. [from CLI](#5.2-Train-your-model-from-CLI)\n",
-    "6. [Models list](#6.-Models-list)"
+    "6. [Models list](#6.-Models-list)\n",
+    "7. [Simple few-shot classifiers](#7.-Simple-few-shot-classifiers)\n",
+    "\n",
+    "    7.1. [Few-shot setting](#7.1-Few-shot-setting)\n",
+    "\n",
+    "    7.2. [Multiple languages support](#7.2-Multiple-languages-support)\n",
+    "\n",
+    "    7.3. [Dataset and Scores](#7.3-Dataset-and-Scores)"
    ]
   },
   {
@@ -387,11 +395,108 @@
     "| rusentiment_convers_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.5 GB | F1-weighted | 0.7724  |\n",
     "| topics_distilbert_base_uncased | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7. Simple few-shot classifiers\n",
+    "\n",
+    "Additionally, in the [faq](https://github.com/deeppavlov/DeepPavlov/tree/master/deeppavlov/configs/faq) section you can find a list of fast and simple pre-BERT models, which consist of a vectorizer and a simple classifier. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.1 Few-shot setting\n",
+    "\n",
+    "In the current setting these configs can be used for few-shot classification -- a task, in which only a few training examples are available for each class (usually 5 or 10). Note that the configs take the full version of the dataset as the input and sample N examples for each class of the train data in the iterator. \n",
+    "\n",
+    "The sampling is done in the `few_shot_iterator` component of the pipeline and the `shot` format defines the number of examples to be sampled. \n",
+    "In order to use these configs for normal classification you can replace the `dataset_iterator` with a basic one or set the `shot` parameter to `None`.\n",
+    "\n",
+    "If you are interested in larger models with more parameters created specifically for achieving high scores on the few-shot task, see our [few-shot and DNNC page](http://docs.deeppavlov.ai/en/master/features/models/few-shot-classification.html).  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.2 Multiple languages support\n",
+    "\n",
+    "Currently these configs are designed to support classificcation in two languages: English and Russian. \n",
+    "\n",
+    "In order to work with the language you need, define the `LANGUAGE` variable in the `metadata` section (`ru` or `en`) of the config and change the Spacy model (if used) to the corresponding one: `SPACY_MODEL` variable to `en_core_web_sm` for English or `ru_core_news_sm` for Russian.\n",
+    "\n",
+    "You can do that by directly editing the condfig file through a text editor or change it through Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "en\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_config = parse_config('fasttext_logreg')\n",
+    "\n",
+    "print(model_config['metadata']['variables']['LANGUAGE'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_config['metadata']['variables']['LANGUAGE'] = 'ru'\n",
+    "model_config['metadata']['variables']['SPACY_MODEL'] = 'ru_core_news_sm'"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.3 Dataset and Scores\n",
+    "\n",
+    "To demonstrate the performance of these models in two languages, we use the English and Russian subsets of [the MASSIVE dataset](https://github.com/alexa/massive). \n",
+    "\n",
+    "MASSIVE is a parallel dataset of utterrances in 52 languages with annotations for the Natural Language Understanding tasks of intent prediction and slot annotation. We only employ the intent classification data. You can see the results of the given configs in 5-shot classification setting in the table below."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Config name | Language | Train accuracy | Validation accuracy | Test accuracy |\n",
+    "| :--- | --- | --- | --- | ---: |\n",
+    "| tfidf_logreg | en | 0.99 | 0.4506 | 0.4499 |\n",
+    "| fasttext_logreg | en | 0.9632 | 0.5239 | 0.5155 |\n",
+    "| tfidf_cos_sim | en | 1.0 | 0.361 | 0.3645 |\n",
+    "| fasttext_cos_sim | en | 1.0 | 0.4166 | 0.3964 |\n",
+    "| tfidf_logreg | ru | 0.9365 | 0.306 | 0.3299 |\n",
+    "| fasttext_logreg | ru | 0.9632 | 0.4565 | 0.4304 |\n",
+    "| tfidf_cos_sim | ru | 0.0167 | 0.062 | 0.0525 |\n",
+    "| fasttext_cos_sim | ru | 1.0 | 0.3389 | 0.351 |"
+   ]
   }
- ],
- "metadata": {
-  "accelerator": "GPU"
- },
- "nbformat": 4,
- "nbformat_minor": 4
+],
+"metadata": {
+ "accelerator": "GPU"
+},
+"nbformat": 4,
+"nbformat_minor": 4
 }
