update install info in doc notebooks

--- a/docs/features/models/NER.ipynb
+++ b/docs/features/models/NER.ipynb
@@ -129,13 +129,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "`ner_ontonotes_bert_torch` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "The full list of NER models with their config names can be found in the [table](#6.-Models-list)."
+    "The full list of NER models with their config names can be found in the [table](#6.-Models-list).\n",
+    "\n",
+    "There are alternative ways to install the model's packages that do not require executing a separate command -- see the options in the next sections of this page.   "
    ]
   },
   {
@@ -168,7 +171,17 @@
    "source": [
     "from deeppavlov import build_model\n",
     "\n",
-    "ner_model = build_model('ner_ontonotes_bert_torch', download=True)"
+    "ner_model = build_model('ner_ontonotes_bert_torch', download=True, install=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `download` argument defines whether it is necessary to download the files defined in the `download` section of the config: usually it provides the links to the train and test data, to the pretrained models, or to the embeddings.\n",
+    "\n",
+    "Setting the `install` argument to `True` is equivalent to executing the command line `install` command. If set to `True`, it will first install all the required packages."
    ]
   },
   {
@@ -568,10 +581,10 @@
     "| **CARDINAL**     | Numerals that do not fall under another type           |"
    ]
   }
- ],
- "metadata": {
-  "accelerator": "GPU"
- },
- "nbformat": 4,
- "nbformat_minor": 4
+],
+"metadata": {
+ "accelerator": "GPU"
+},
+"nbformat": 4,
+"nbformat_minor": 4
 }
