--- a/docs/features/models/SQuAD.ipynb
+++ b/docs/features/models/SQuAD.ipynb
@@ -159,13 +159,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "`squad_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "The full list of the models with their config names can be found in the [table](#6.-Models-list)."
+    "The full list of the models with their config names can be found in the [table](#6.-Models-list).\n",
+    "\n",
+    "There are alternative ways to install the model's packages that do not require executing a separate command -- see the options in the next sections of this page.   "
    ]
   },
   {
@@ -198,7 +201,17 @@
    "source": [
     "from deeppavlov import build_model\n",
     "\n",
-    "model = build_model('squad_bert', download=True)"
+    "model = build_model('squad_bert', download=True, install=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `download` argument defines whether it is necessary to download the files defined in the `download` section of the config: usually it provides the links to the train and test data, to the pretrained models, or to the embeddings.\n",
+    "\n",
+    "Setting the `install` argument to `True` is equivalent to executing the command line `install` command. If set to `True`, it will first install all the required packages."
    ]
   },
   {
@@ -518,7 +531,29 @@
   }
  ],
  "metadata": {
-  "accelerator": "GPU"
+  "accelerator": "GPU",
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "09203ac7cd8d5ba0e6b7750906c2c9e7bc30ed1d0e736c7ffbb7be05138d4f4a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
