--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -102,13 +102,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "`insults_kaggle_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "The full list of NER models with their config names can be found in the [table](#6.-Models-list)."
+    "The full list of NER models with their config names can be found in the [table](#6.-Models-list).\n",
+    "\n",
+    "There are alternative ways to install the model's packages that do not require executing a separate command -- see the options in the next sections of this page.   "
    ]
   },
   {
@@ -131,7 +134,17 @@
    "source": [
     "from deeppavlov import build_model\n",
     "\n",
-    "model = build_model('insults_kaggle_bert', download=True)"
+    "model = build_model('insults_kaggle_bert', download=True, install=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `download` argument defines whether it is necessary to download the files defined in the `download` section of the config: usually it provides the links to the train and test data, to the pretrained models, or to the embeddings.\n",
+    "\n",
+    "Setting the `install` argument to `True` is equivalent to executing the command line `install` command. If set to `True`, it will first install all the required packages."
    ]
   },
   {
