delete unnecessary configs and update docs

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -416,7 +416,7 @@
    "source": [
     "# 7. Simple few-shot classifiers\n",
     "\n",
-    "Additionally, in the [faq](https://github.com/deeppavlov/DeepPavlov/tree/master/deeppavlov/configs/faq) section you can find a list of fast and simple pre-BERT models, which consist of a vectorizer and a simple classifier. "
+    "Additionally, in the [faq](https://github.com/deeppavlov/DeepPavlov/tree/master/deeppavlov/configs/faq) section you can find a config for a fast and simple pre-BERT model, which consists of a fasttext vectorizer and a simple logistic regression classifier. "
    ]
   },
   {
@@ -426,10 +426,10 @@
    "source": [
     "## 7.1 Few-shot setting\n",
     "\n",
-    "In the current setting these configs can be used for few-shot classification -- a task, in which only a few training examples are available for each class (usually 5 or 10). Note that the configs take the full version of the dataset as the input and sample N examples for each class of the train data in the iterator. \n",
+    "In the current setting the config can be used for few-shot classification -- a task, in which only a few training examples are available for each class (usually 5 or 10). Note that the configs take the full version of the dataset as the input and sample N examples for each class of the train data in the iterator. \n",
     "\n",
     "The sampling is done in the `few_shot_iterator` component of the pipeline and the `shot` format defines the number of examples to be sampled. \n",
-    "In order to use these configs for normal classification you can change the `dataset_iterator` to the `basic_classification_iterator` or set the `shot` parameter to `None`."
+    "In order to use the config for normal classification you can change the `dataset_iterator` to the `basic_classification_iterator` or set the `shot` parameter to `None`."
    ]
   },
   {
@@ -439,7 +439,7 @@
    "source": [
     "## 7.2 Multiple languages support\n",
     "\n",
-    "Currently these configs are designed to support classificcation in two languages: English and Russian. \n",
+    "Currently this config are designed to support classificcation in two languages: English and Russian. \n",
     "\n",
     "In order to work with the language you need, define the `LANGUAGE` variable in the `metadata` section (`ru` or `en`) of the config and change the Spacy model (if used) to the corresponding one: `SPACY_MODEL` variable to `en_core_web_sm` for English or `ru_core_news_sm` for Russian.\n",
     "\n",
@@ -482,7 +482,7 @@
    "source": [
     "## 7.3 Dataset and Scores\n",
     "\n",
-    "To demonstrate the performance of these models in two languages, we use the English and Russian subsets of [the MASSIVE dataset](https://github.com/alexa/massive). \n",
+    "To demonstrate the performance of the model in two languages, we use the English and Russian subsets of [the MASSIVE dataset](https://github.com/alexa/massive). \n",
     "\n",
     "MASSIVE is a parallel dataset of utterrances in 52 languages with annotations for the Natural Language Understanding tasks of intent prediction and slot annotation. We only employ the intent classification data. You can see the results of the given configs in 5-shot classification setting in the table below."
    ]
@@ -494,20 +494,14 @@
    "source": [
     "| Config name | Language | Train accuracy | Validation accuracy | Test accuracy |\n",
     "| :--- | --- | --- | --- | ---: |\n",
-    "| tfidf_logreg | en | 0.99 | 0.4506 | 0.4499 |\n",
     "| fasttext_logreg | en | 0.9632 | 0.5239 | 0.5155 |\n",
-    "| tfidf_cos_sim | en | 1.0 | 0.361 | 0.3645 |\n",
-    "| fasttext_cos_sim | en | 1.0 | 0.4166 | 0.3964 |\n",
-    "| tfidf_logreg | ru | 0.9365 | 0.306 | 0.3299 |\n",
-    "| fasttext_logreg | ru | 0.9632 | 0.4565 | 0.4304 |\n",
-    "| tfidf_cos_sim | ru | 0.0167 | 0.062 | 0.0525 |\n",
-    "| fasttext_cos_sim | ru | 1.0 | 0.3389 | 0.351 |"
+    "| fasttext_logreg | ru | 0.9632 | 0.4565 | 0.4304 |"
    ]
   }
- ],
- "metadata": {
-    "accelerator": "GPU"
-   },
-   "nbformat": 4,
-   "nbformat_minor": 4
-  }
+],
+"metadata": {
+ "accelerator": "GPU"
+},
+"nbformat": 4,
+"nbformat_minor": 4
+}
