revert: changes in SQuAD.ipynb

--- a/docs/features/models/SQuAD.ipynb
+++ b/docs/features/models/SQuAD.ipynb
@@ -159,16 +159,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "`squad_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "The full list of the models with their config names can be found in the [table](#6.-Models-list).\n",
-    "\n",
-    "There are alternative ways to install the model's packages that do not require executing a separate command -- see the options in the next sections of this page.   "
+    "The full list of the models with their config names can be found in the [table](#6.-Models-list)."
    ]
   },
   {
@@ -201,17 +198,7 @@
    "source": [
     "from deeppavlov import build_model\n",
     "\n",
-    "model = build_model('squad_bert', download=True, install=True)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The `download` argument defines whether it is necessary to download the files defined in the `download` section of the config: usually it provides the links to the train and test data, to the pretrained models, or to the embeddings.\n",
-    "\n",
-    "Setting the `install` argument to `True` is equivalent to executing the command line `install` command. If set to `True`, it will first install all the required packages."
+    "model = build_model('squad_bert', download=True)"
    ]
   },
   {
@@ -531,8 +518,8 @@
   }
  ],
  "metadata": {
-    "accelerator": "GPU"
-   },
-   "nbformat": 4,
-   "nbformat_minor": 4
-  }
+  "accelerator": "GPU"
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
