docs: markdown cells combined

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -401,25 +401,15 @@
    "source": [
     "# 7. Simple few-shot classifiers\n",
     "\n",
-    "Additionally, in the [faq](https://github.com/deeppavlov/DeepPavlov/tree/master/deeppavlov/configs/faq) section you can find a config for a fast and simple pre-BERT model, which consists of a fasttext vectorizer and a simple logistic regression classifier. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Additionally, in the [faq](https://github.com/deeppavlov/DeepPavlov/tree/master/deeppavlov/configs/faq) section you can find a config for a fast and simple pre-BERT model, which consists of a fasttext vectorizer and a simple logistic regression classifier.\n",
+    "\n",
     "## 7.1 Few-shot setting\n",
     "\n",
-    "In the current setting the config can be used for few-shot classification -- a task, in which only a few training examples are available for each class (usually 5 or 10). Note that the configs take the full version of the dataset as the input and sample N examples for each class of the train data in the iterator. \n",
+    "In the current setting the config can be used for few-shot classification - a task, in which only a few training examples are available for each class (usually 5 or 10). Note that the configs take the full version of the dataset as the input and sample N examples for each class of the train data in the iterator. \n",
     "\n",
     "The sampling is done in the `few_shot_iterator` component of the pipeline and the `shot` format defines the number of examples to be sampled. \n",
-    "In order to use the config for normal classification you can change the `dataset_iterator` to the `basic_classification_iterator` or set the `shot` parameter to `None`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "In order to use the config for normal classification you can change the `dataset_iterator` to the `basic_classification_iterator` or set the `shot` parameter to `None`.\n",
+    "\n",
     "## 7.2 Multiple languages support\n",
     "\n",
     "Currently this config are designed to support classificcation in two languages: English and Russian. \n",
@@ -431,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -444,16 +434,8 @@
    ],
    "source": [
     "model_config = parse_config('fasttext_logreg')\n",
+    "print(model_config['metadata']['variables']['LANGUAGE'])\n",
     "\n",
-    "print(model_config['metadata']['variables']['LANGUAGE'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "model_config['metadata']['variables']['LANGUAGE'] = 'ru'\n",
     "model_config['metadata']['variables']['SPACY_MODEL'] = 'ru_core_news_sm'"
    ]
@@ -466,13 +448,8 @@
     "\n",
     "To demonstrate the performance of the model in two languages, we use the English and Russian subsets of [the MASSIVE dataset](https://github.com/alexa/massive). \n",
     "\n",
-    "MASSIVE is a parallel dataset of utterrances in 52 languages with annotations for the Natural Language Understanding tasks of intent prediction and slot annotation. We only employ the intent classification data. You can see the results of the given configs in 5-shot classification setting in the table below."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "MASSIVE is a parallel dataset of utterrances in 52 languages with annotations for the Natural Language Understanding tasks of intent prediction and slot annotation. We only employ the intent classification data. You can see the results of the given configs in 5-shot classification setting in the table below.\n",
+    "\n",
     "| Config name | Language | Train accuracy | Validation accuracy | Test accuracy |\n",
     "| :--- | --- | --- | --- | ---: |\n",
     "| fasttext_logreg | en | 0.9632 | 0.5239 | 0.5155 |\n",
