update iterator info in classification.ipynb

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -396,6 +396,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -405,18 +406,17 @@
     "\n",
     "## 7.1 Few-shot setting\n",
     "\n",
-    "In the current setting the config can be used for few-shot classification - a task, in which only a few training examples are available for each class (usually 5 or 10). Note that the configs take the full version of the dataset as the input and sample N examples for each class of the train data in the iterator. \n",
+    "In the current setting the config can be used for few-shot classification - a task, in which only a few training examples are available for each class (usually from 5 to 10). Note that the config takes the full version of the dataset as the input and samples N examples for each class of the train data in the iterator. \n",
     "\n",
-    "The sampling is done in the `few_shot_iterator` component of the pipeline and the `shot` format defines the number of examples to be sampled. \n",
-    "In order to use the config for normal classification you can change the `dataset_iterator` to the `basic_classification_iterator` or set the `shot` parameter to `None`.\n",
+    "The sampling is done within the `basic_classification_iterator` component of the pipeline and the `shot` parameter defines the number of examples to be sampled. By default the `shot` parameter is set to `None` (no sampling applied).\n",
     "\n",
     "## 7.2 Multiple languages support\n",
     "\n",
-    "Currently this config are designed to support classificcation in two languages: English and Russian. \n",
+    "Currently this config is designed to support classification in two languages: English and Russian. \n",
     "\n",
-    "In order to work with the language you need, define the `LANGUAGE` variable in the `metadata` section (`ru` or `en`) of the config and change the Spacy model (if used) to the corresponding one: `SPACY_MODEL` variable to `en_core_web_sm` for English or `ru_core_news_sm` for Russian.\n",
+    "In order to work with the language you need, define the `LANGUAGE` variable in the `metadata` section (`ru` or `en`) of the config and change the Spacy model (if used) to the corresponding one: `SPACY_MODEL` variable to `en_core_web_sm` for English or to `ru_core_news_sm` for Russian.\n",
     "\n",
-    "You can do that by directly editing the condfig file through a text editor or change it through Python."
+    "You can do that by directly editing the config file through a text editor or change it through Python."
    ]
   },
   {
@@ -441,6 +441,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -453,7 +454,7 @@
     "| Config name | Language | Train accuracy | Validation accuracy | Test accuracy |\n",
     "| :--- | --- | --- | --- | ---: |\n",
     "| fasttext_logreg | en | 0.9632 | 0.5239 | 0.5155 |\n",
-    "| fasttext_logreg | ru | 0.9632 | 0.4565 | 0.4304 |"
+    "| fasttext_logreg | ru | 0.9231 | 0.4565 | 0.4304 |"
    ]
   }
  ],
