docs: updated fasttext_logreg ru usage info

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table of contents \n",
+    "# Table of contents\n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
     "2. [Get started with the model](#2.-Get-started-with-the-model)\n",
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`insults_kaggle_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
+    "`insults_kaggle_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html)\n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
     "The full list of NER models with their config names can be found in the [table](#6.-Models-list)."
@@ -405,38 +405,32 @@
     "\n",
     "## 7.1 Few-shot setting\n",
     "\n",
-    "In the current setting the config can be used for few-shot classification - a task, in which only a few training examples are available for each class (usually from 5 to 10). Note that the config takes the full version of the dataset as the input and samples N examples for each class of the train data in the iterator. \n",
+    "In the current setting the config can be used for few-shot classification - a task, in which only a few training examples are available for each class (usually from 5 to 10). Note that the config takes the full version of the dataset as the input and samples N examples for each class of the train data in the iterator.\n",
     "\n",
     "The sampling is done within the `basic_classification_iterator` component of the pipeline and the `shot` parameter defines the number of examples to be sampled. By default the `shot` parameter is set to `None` (no sampling applied).\n",
     "\n",
     "## 7.2 Multiple languages support\n",
     "\n",
-    "Currently this config is designed to support classification in two languages: English and Russian. \n",
+    "By default `fasttext_logreg` supports classification in English, but can be modified for classification in Russian.\n",
     "\n",
-    "In order to work with the language you need, define the `LANGUAGE` variable in the `metadata` section (`ru` or `en`) of the config and change the Spacy model (if used) to the corresponding one: `SPACY_MODEL` variable to `en_core_web_sm` for English or to `ru_core_news_sm` for Russian.\n",
+    "In order to change `fasttext_logreg` language to Russian, change `LANGUAGE` variable in the `metadata.variables` section from `en` to `ru` and change the Spacy model by changing `SPACY_MODEL` variable from `en_core_web_sm` to `ru_core_news_sm`.\n",
     "\n",
-    "You can do that by directly editing the config file through a text editor or change it through Python."
+    "You can do that by directly editing the config file through an editor or change it through Python (example below). N.B. `read_json` and `find_config` combination is intentionally used instead of `parse_config` to read config in the example, because `parse_config` will replace all `LANGUAGE` and `SPACY_MODEL` usages in the config with the default values from `metadata.variables`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "en\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model_config = parse_config('fasttext_logreg')\n",
-    "print(model_config['metadata']['variables']['LANGUAGE'])\n",
+    "from deeppavlov import build_model\n",
+    "from deeppavlov.core.common.file import read_json, find_config\n",
     "\n",
+    "model_config = read_json(find_config('fasttext_logreg'))\n",
     "model_config['metadata']['variables']['LANGUAGE'] = 'ru'\n",
-    "model_config['metadata']['variables']['SPACY_MODEL'] = 'ru_core_news_sm'"
+    "model_config['metadata']['variables']['SPACY_MODEL'] = 'ru_core_news_sm'\n",
+    "model = build_model(model_config, install=True, download=True)"
    ]
   },
   {
@@ -445,7 +439,7 @@
    "source": [
     "## 7.3 Dataset and Scores\n",
     "\n",
-    "To demonstrate the performance of the model in two languages, we use the English and Russian subsets of [the MASSIVE dataset](https://github.com/alexa/massive). \n",
+    "To demonstrate the performance of the model in two languages, we use the English and Russian subsets of [the MASSIVE dataset](https://github.com/alexa/massive).\n",
     "\n",
     "MASSIVE is a parallel dataset of utterrances in 52 languages with annotations for the Natural Language Understanding tasks of intent prediction and slot annotation. We only employ the intent classification data. You can see the results of the given configs in 5-shot classification setting in the table below.\n",
     "\n",
