Refactor faq models (#1608)
Co-authored-by: vasily <vasili.konov@gmail.com>
Co-authored-by: Fedor Ignatov <ignatov.fedor@gmail.com>
Co-authored-by: Дмитрий Евсеев <dmitrij.euseew@yandex.ru>

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table of contents \n",
+    "# Table of contents\n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
     "2. [Get started with the model](#2.-Get-started-with-the-model)\n",
@@ -35,16 +35,23 @@
     "\n",
     "    3.2. [Predict using CLI](#3.2-Predict-using-CLI)\n",
     "4. [Evaluation](#4.-Evaluation)\n",
-    "    \n",
+    "\n",
     "    4.1. [from Python](#4.1-Evaluate-from-Python)\n",
-    "    \n",
+    "\n",
     "    4.2. [from CLI](#4.2-Evaluate-from-CLI)\n",
     "5. [Train the model on your data](#5.-Train-the-model-on-your-data)\n",
-    "   \n",
+    "\n",
     "    5.1. [from Python](#5.1-Train-your-model-from-Python)\n",
-    "   \n",
+    "\n",
     "    5.2. [from CLI](#5.2-Train-your-model-from-CLI)\n",
-    "6. [Models list](#6.-Models-list)"
+    "6. [Models list](#6.-Models-list)\n",
+    "7. [Simple few-shot classifiers](#7.-Simple-few-shot-classifiers)\n",
+    "\n",
+    "    7.1. [Few-shot setting](#7.1-Few-shot-setting)\n",
+    "\n",
+    "    7.2. [Multiple languages support](#7.2-Multiple-languages-support)\n",
+    "\n",
+    "    7.3. [Dataset and Scores](#7.3-Dataset-and-Scores)"
    ]
   },
   {
@@ -97,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`insults_kaggle_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
+    "`insults_kaggle_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html)\n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
     "The full list of NER models with their config names can be found in the [table](#6.-Models-list)."
@@ -386,6 +393,60 @@
     "| rusentiment_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.3 GB | F1-weighted | 0.7005 |\n",
     "| rusentiment_convers_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.5 GB | F1-weighted | 0.7724  |\n",
     "| topics_distilbert_base_uncased | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7. Simple few-shot classifiers\n",
+    "\n",
+    "Additionally, in the [faq](https://github.com/deeppavlov/DeepPavlov/tree/master/deeppavlov/configs/faq) section you can find a config for a fast and simple pre-BERT model, which consists of a fasttext vectorizer and a simple logistic regression classifier.\n",
+    "\n",
+    "## 7.1 Few-shot setting\n",
+    "\n",
+    "In the current setting the config can be used for few-shot classification - a task, in which only a few training examples are available for each class (usually from 5 to 10). Note that the config takes the full version of the dataset as the input and samples N examples for each class of the train data in the iterator.\n",
+    "\n",
+    "The sampling is done within the `basic_classification_iterator` component of the pipeline and the `shot` parameter defines the number of examples to be sampled. By default the `shot` parameter is set to `None` (no sampling applied).\n",
+    "\n",
+    "## 7.2 Multiple languages support\n",
+    "\n",
+    "By default `fasttext_logreg` supports classification in English, but can be modified for classification in Russian.\n",
+    "\n",
+    "In order to change `fasttext_logreg` language to Russian, change `LANGUAGE` variable in the `metadata.variables` section from `en` to `ru` and change the Spacy model by changing `SPACY_MODEL` variable from `en_core_web_sm` to `ru_core_news_sm`.\n",
+    "\n",
+    "You can do that by directly editing the config file through an editor or change it through Python (example below). N.B. `read_json` and `find_config` combination is intentionally used instead of `parse_config` to read config in the example, because `parse_config` will replace all `LANGUAGE` and `SPACY_MODEL` usages in the config with the default values from `metadata.variables`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deeppavlov import build_model\n",
+    "from deeppavlov.core.common.file import read_json, find_config\n",
+    "\n",
+    "model_config = read_json(find_config('fasttext_logreg'))\n",
+    "model_config['metadata']['variables']['LANGUAGE'] = 'ru'\n",
+    "model_config['metadata']['variables']['SPACY_MODEL'] = 'ru_core_news_sm'\n",
+    "model = build_model(model_config, install=True, download=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.3 Dataset and Scores\n",
+    "\n",
+    "To demonstrate the performance of the model in two languages, we use the English and Russian subsets of [the MASSIVE dataset](https://github.com/alexa/massive).\n",
+    "\n",
+    "MASSIVE is a parallel dataset of utterrances in 52 languages with annotations for the Natural Language Understanding tasks of intent prediction and slot annotation. We only employ the intent classification data. You can see the results of the given configs in 5-shot classification setting in the table below.\n",
+    "\n",
+    "| Config name | Language | Train accuracy | Validation accuracy | Test accuracy |\n",
+    "| :--- | --- | --- | --- | ---: |\n",
+    "| fasttext_logreg | en | 0.9632 | 0.5239 | 0.5155 |\n",
+    "| fasttext_logreg | ru | 0.9231 | 0.4565 | 0.4304 |"
    ]
   }
  ],
