--- a/topics.ipynb
+++ b/topics.ipynb
@@ -22,8 +22,6 @@
     "from deeppavlov.core.data.simple_vocab import SimpleVocabulary\n",
     "from deeppavlov.download import download_resource\n",
     "from deeppavlov.models.classifiers.proba2labels import Proba2Labels\n",
-    "from deeppavlov.models.preprocessors.torch_transformers_preprocessor import TorchTransformersPreprocessor\n",
-    "from deeppavlov.models.torch_bert.torch_transformers_classifier import TorchTransformersClassifierModel\n",
     "from deeppavlov.utils.pip_wrapper.pip_wrapper import install_from_config"
    ]
   },
@@ -53,6 +51,17 @@
     "    'http://files.deeppavlov.ai/deeppavlov_data/classifiers/topic_distilbert_base_v0.tar.gz',\n",
     "    {classifiers_path}\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "273d7f72-c63c-479f-96c7-4d985268a1b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deeppavlov.models.preprocessors.torch_transformers_preprocessor import TorchTransformersPreprocessor\n",
+    "from deeppavlov.models.torch_bert.torch_transformers_classifier import TorchTransformersClassifierModel"
    ]
   },
   {
